hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__diverse_cfg_children@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i1 @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca i1, align 1
  %"4_0" = alloca i1, align 1
  %"01" = alloca i1, align 1
  %"11_0" = alloca {}, align 8
  %"12_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  br label %0

0:                                                ; preds = %entry_block
  store i1 false, ptr %"12_0", align 1
  store {} undef, ptr %"11_0", align 1
  %"11_02" = load {}, ptr %"11_0", align 1
  %"12_03" = load i1, ptr %"12_0", align 1
  store {} %"11_02", ptr %"11_0", align 1
  store i1 %"12_03", ptr %"12_0", align 1
  %"11_04" = load {}, ptr %"11_0", align 1
  %"12_05" = load i1, ptr %"12_0", align 1
  switch i1 false, label %1 [
  ]

1:                                                ; preds = %0
  store i1 %"12_05", ptr %"01", align 1
  br label %2

2:                                                ; preds = %1
  %"06" = load i1, ptr %"01", align 1
  store i1 %"06", ptr %"4_0", align 1
  %"4_07" = load i1, ptr %"4_0", align 1
  store i1 %"4_07", ptr %"0", align 1
  %"08" = load i1, ptr %"0", align 1
  ret i1 %"08"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/PNzlVLClAphFGIyrhvZsHeD")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25761, type: !5, scopeLine: 25762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
