hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__diverse_module_children@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal void @_hl.f1.1() !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void
}

define internal void @_hl.f2.4() !dbg !7 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/ClAphFG/yrhvZs")
!3 = distinct !DISubprogram(name: "_hl.f1.1", linkageName: "_hl.f1.1", scope: null, file: !4, line: 5388, type: !5, scopeLine: 5389, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{null}
!7 = distinct !DISubprogram(name: "_hl.f2.4", linkageName: "_hl.f2.4", scope: null, file: !4, line: 8376, type: !5, scopeLine: 8377, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
