hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__emit_hugr_call@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main_void.1() !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @_hl.main_void.1(), !dbg !7
  ret void
}

define i1 @_hl.main_unary.5(i1 %0) !dbg !8 {
alloca_block:
  %"0" = alloca i1, align 1
  %"6_0" = alloca i1, align 1
  %"8_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, ptr %"6_0", align 1
  %"6_01" = load i1, ptr %"6_0", align 1
  %1 = call i1 @_hl.main_unary.5(i1 %"6_01"), !dbg !12
  store i1 %1, ptr %"8_0", align 1
  %"8_02" = load i1, ptr %"8_0", align 1
  store i1 %"8_02", ptr %"0", align 1
  %"03" = load i1, ptr %"0", align 1
  ret i1 %"03"
}

define { i1, i1 } @_hl.main_binary.9(i1 %0, i1 %1) !dbg !13 {
alloca_block:
  %"0" = alloca i1, align 1
  %"1" = alloca i1, align 1
  %"10_0" = alloca i1, align 1
  %"10_1" = alloca i1, align 1
  %"12_0" = alloca i1, align 1
  %"12_1" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, ptr %"10_0", align 1
  store i1 %1, ptr %"10_1", align 1
  %"10_01" = load i1, ptr %"10_0", align 1
  %"10_12" = load i1, ptr %"10_1", align 1
  %2 = call { i1, i1 } @_hl.main_binary.9(i1 %"10_01", i1 %"10_12"), !dbg !17
  %3 = extractvalue { i1, i1 } %2, 0, !dbg !17
  %4 = extractvalue { i1, i1 } %2, 1, !dbg !17
  store i1 %3, ptr %"12_0", align 1
  store i1 %4, ptr %"12_1", align 1
  %"12_03" = load i1, ptr %"12_0", align 1
  %"12_14" = load i1, ptr %"12_1", align 1
  store i1 %"12_03", ptr %"0", align 1
  store i1 %"12_14", ptr %"1", align 1
  %"05" = load i1, ptr %"0", align 1
  %"16" = load i1, ptr %"1", align 1
  %mrv = insertvalue { i1, i1 } poison, i1 %"05", 0
  %mrv7 = insertvalue { i1, i1 } %mrv, i1 %"16", 1
  ret { i1, i1 } %mrv7
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/p/FGIyrhvZsHeDgUnyeIVw/u/KJHaZEPSZwPXPeycUvnujGxZKPRC/cNfsTEGLoPGC")
!3 = distinct !DISubprogram(name: "_hl.main_void.1", linkageName: "_hl.main_void.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{null}
!7 = !DILocation(line: 27062, column: 402, scope: !3)
!8 = distinct !DISubprogram(name: "_hl.main_unary.5", linkageName: "_hl.main_unary.5", scope: null, file: !4, line: 25884, type: !9, scopeLine: 25885, spFlags: DISPFlagDefinition, unit: !1)
!9 = !DISubroutineType(types: !10)
!10 = !{!11, !11}
!11 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!12 = !DILocation(line: 8376, column: 157, scope: !8)
!13 = distinct !DISubprogram(name: "_hl.main_binary.9", linkageName: "_hl.main_binary.9", scope: null, file: !4, line: 32551, type: !14, scopeLine: 32552, spFlags: DISPFlagDefinition, unit: !1)
!14 = !DISubroutineType(types: !15)
!15 = !{!16, !11, !11}
!16 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i1 }", file: !2, align: 8, elements: !10)
!17 = !DILocation(line: 1712, column: 109, scope: !13)
